Fixed weird behaviour with scrollbar

--- a/~miguel/css/layout-mobile.css
+++ b/~miguel/css/layout-mobile.css
@@ -108,9 +108,8 @@ un elemento del cual se despliegan otros) */
 	left: -250px;
 	z-index: 20;
 	padding: 10px;
-	margin: 10px;
-	margin-left: 0px;
 	text-align: center;
+	overflow: auto;
 }
 #lista_secc {
 	padding-left: 0px;
